# wayland-automation

./: .gitignore  .markdownlint.json  .markdownlintignore  BRANCHES.md  README.md  eslint.config.js  index.html  main.py  package.json  pnpm-lock.yaml  react-doctor.config.json  tailwind.config.js  vite.config.ts
.cursor/commands/: auto-commit.md  problems-search.md  update-docs.md
.cursor/rules/: git-commits.mdc  project.mdc  scripts.mdc
.github/workflows/: lint.yml
app/: __init__.py  __main__.py  config.py
app/services/: __init__.py  commands.py  daemon_info.py  runner.py
app/ui/: daemon_panel.py  main_window.py  theme.py  widgets.py
core/: apagar.sh  prender.sh  setup.sh  ydotoold.sh
core/lib/: common.sh
docs/: aplicacion.md  arquitectura.md  calidad.md  ci-workflow.example.yml  daemon.md  estructura.md  instalacion.md  overview.md  referencias.md  scripts.md  solucion-problemas.md  tauri.md
scripts/: activar-entorno.sh  atalhos_numeros.sh  check-tauri-deps.sh  cursor.sh  ejecutar_macro.sh  generate-tauri-icons.sh  grabar_posiciones.sh  macro_gui.sh  mover_raton.sh  setup-tauri-deps.sh  setup.sh  ydotoold.sh
scripts/config/: atalhos.json.example
scripts/lib/: atalhos_numeros.py  common.sh  grabar_posiciones.py  input_common.py
scripts/tools/: cursor.sh  grabar_posiciones.sh  mover_raton.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hotkeys.rs  lib.rs  main.rs
src/components/: CursorColorPanel.tsx  Header.tsx  LogPanel.tsx  (+6 more)
systemd/: ydotoold.service
(+14 files in other folders)
