[package]
name = "wayland-automation"
version = "0.1.0"
description = "Automatización Wayland (Sway + ydotool)"
authors = ["FraVelz"]
edition = "2021"

[lib]
name = "wayland_automation_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
evdev = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
